  (Miod Vallat, review by Gabriel Scherer)

- #12814: More detailed failure messages from `input_value` and `Marshal.from_*`
  (Xavier Leroy, review by Stephen Dolan and Anil Madhavapeddy)

- #12815: Correctly format multi-line locations in exception backtraces, in the
  style that the compiler driver uses.
  (David Allsopp, review by Gabriel Scherer)

### Code generation and optimizations:

- #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
  This reduces stack usage.  It's only C stacks that require 16-alignment.
  (Xavier Leroy, review by Gabriel Scherer and Stephen Dolan)

- #12311: on POWER, 32-bit FP numbers stored in memory (e.g. in bigarrays)
  were not correctly rounded sometimes.
  (Xavier Leroy, review by Anil Madhavapeddy and Tim McGilchrist)

- #12551, #12608, #12782: Overhaul of recursive value compilation.
  Extend the Rec_check classification to handle constants, propagate the
  classification through the compiler, compute sizes during classification.
  (Vincent Laviron and Lunia Ayanides, review by Gabriel Scherer)

- #1809, #12181: rewrite `compare x y op 0` to `x op y` when values are integers
  (Xavier Clerc, Stefan Muenzel, review by Gabriel Scherer and Vincent Laviron)

### Standard library:

- #12716: Add `Format.pp_print_nothing` function.
  (Léo Andrès, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11563: Add the Dynarray module to the stdlib. Dynamic arrays are
  arrays whose length can be changed by adding or removing elements at
  the end, similar to 'vectors' in C++ or Rust.
  (Gabriel Scherer, Simon Cruanes and Florian Angeletti, review by
   Daniel Bünzli, Guillaume Munch-Maccagnoni, Clément Allain,
   Damien Doligez, Wiktor Kuchta and Pieter Goetschalckx)

* #6732, #12423: Make Buffer.add_substitute surjective and fix its
  documentation.
  (Damien Doligez, review by Antonin Décimo)

* #10775, #12499: Half-precision floating-point elements in Bigarray.